--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Client ID
+ <!-- Client ID
 2DwOoJsp_8BQuN0F2Y-Txg
 
 API Key
@@ -33,22 +33,29 @@ rOr7KtEjGS34UJetzUkIhy4Y0Xn1gJ8nI60QETBP1xkh8JaFrJQZ1u1P6bbSgZWJQ9tM7CjgpsCELCTr
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
 
-    var restaurant = "Mcdonald's";
-    var queryURL = "https://api.yelp.com/v3/businesses/search=" + restaurant;
+    var restaurant = "italian";
+    var queryURL = "https://cors-anywhere.herokuapp.com/https://api.yelp.com/v3/businesses/WavvLdfdP6g8aZTtbBQHTw";
 
     $.ajax({
       url: queryURL,
-      Method: "GET"
-    }).then(function(response) {
-      var tBody = $("tbody");
-      var tRow = $("<tr>");
-      var titleTd = $("<td>").text(response.businesses);
-      var ratingTd = $("<td>").text(response.rating);
-      var categoriesTd = $("<td>").text(response.cataegories.alias);
-      tRow.append(titleTd, ratingTd, categoriesTd);
-      tBody.append(tRow);
-  
+      headers: {"Authorization HTTP": "Bearer rOr7KtEjGS34UJetzUkIhy4Y0Xn1gJ8nI60QETBP1xkh8JaFrJQZ1u1P6bbSgZWJQ9tM7CjgpsCELCTrMRygxF0kffkaR6nIeRdhgv8QYgoHNRHwKDFmUNkkJK23W3Yx"},
+      method: "GET",
+      dataType: "json",
+      success: function(data){
+        console.log("success: " + data)
+      }
     })
+    // // .then(function(response) {
+    //   console.log(response);
+    //   var tBody = $("tbody");
+    //   var tRow = $("<tr>");
+    //   var titleTd = $("<td>").text(response.businesses);
+    //   var ratingTd = $("<td>").text(response.rating);
+    //   var categoriesTd = $("<td>").text(response.categories.alias);
+    //   tRow.append(titleTd, ratingTd, categoriesTd);
+    //   tBody.append(tRow);
+  
+    // })
   
 
   
